Home page updates

--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -25,15 +25,72 @@
 <section class="bg-gsa- toolbox3-img" style="min-height: 400px;">
 
   
-  <div class="container-fluid px-5 py-5">
+  <div class="container-fluid px-0 pb-5 pt-3">
    
 
       
-    <h1 class="white font-weight-bold">Vendor Toolbox</h1>
+    <h1 class="white font-weight-bold px-5">Vendor Toolbox</h1>
     
+
+<div class="row m-0 mb-4">
+  <div class="col p-0 bg-gsa-dark-grey">
+      <div class="" style=" height: 100%;">
+          <div class="container px-3 py-3 d-flex justify-content-center">
+              <div class="col-2">
+                  <div class="card btn btn-default" [routerLink]="['/login']">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-invoice color-green app-icon" ></span>
+                          </div>
+                          <a class="nav-link p-0 text-center">
+                              <b class="gsa-red">Offers/Mods</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="card btn btn-default">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-edit color-orange app-icon" ></span>
+                          </div>
+                          <a href="" class="nav-link p-0 text-center">
+                              <b class="gsa-red">Mass Mods</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="card btn btn-default">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-invoice-dollar color-purple app-icon" ></span>
+                          </div>
+                          <a href="" class="nav-link p-0 text-center">
+                              <b class="gsa-red">P.O.'s</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="card btn btn-default">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-chart-line color-teal app-icon" ></span>
+                          </div>
+                          <a href="" class="nav-link p-0 text-center">
+                              <b class="gsa-red">Sales Reports</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
  
    
-    <div class="row">
+    <div class="row px-5">
 
 
       <div class="col-lg-12 col-xl-3 pt-3 border-right border-gsa-light-blue">
@@ -46,7 +103,7 @@
           <div class="col-sm-12 col-xl-12 pt-3 px-0 h-100">
             <div class="mb-3"> 
             <hr class="bg-gsa-light-blue mb-4  mt-0 border-bottom border-gsa-light-blue" /> 
-              <h3 class="white d-inline-block"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> MAS Modifications</h3>
+              <h3 class="white d-inline-block"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> Mass Mods</h3>
               <p class="ml-5 d-inline-block">Review and accept MAS Modifications</p>
               <a class="btn btn-secondary ml-5">Get started</a>
             </div>
