--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -225,7 +225,7 @@
           <div class="col-sm-12 col-xl pt-3 pl-4 h-100">
             <div class="mb-3">  
               <h3 class="white"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> MAS Modifications</h3>
-              <p class="ml-5">Review and accept MAS Modifications</p>
+              <p class="ml-5">Review and accept Mass Modifications</p>
               <a class="btn btn-secondary ml-5">Get started</a>
             </div>
           </div>
