design/content updates

--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -21,7 +21,50 @@
     </div>
   </div>
 </div>
+
+<section class="bg-dark shadow white">
+
   
+  <div class="container-fluid ">
+   
+
+      
+ 
+    
+ 
+   
+    
+
+
+     
+ 
+        
+
+        <div class="row justify-content-lg-center px-4 py-5">
+          <div class="col-sm-12 col-xl h-100">
+           <h2 class="m-0 p-0 font-weight-bold white">Quick Links</h2>
+          </div>
+          <div class="col-sm-12 col-xl  h-100">
+           eOffer - Icon goes here
+          </div>
+          
+          <div class="col-sm-12 col-xl  h-100 ">
+            PO Portal - Icon goes here
+          </div>
+
+          <div class="col-sm-12 col-xl  h-100">
+            FS SR - Icon goes here
+          </div>
+        </div>
+
+     
+
+
+   
+    
+  </div>  
+</section>
+
 <section class="bg-gsa- toolbox3-img" style="min-height: 400px;">
 
   
@@ -46,8 +89,8 @@
           <div class="col-sm-12 col-xl-12 pt-3 px-0 h-100">
             <div class="mb-3"> 
             <hr class="bg-gsa-light-blue mb-4  mt-0 border-bottom border-gsa-light-blue" /> 
-              <h3 class="white d-inline-block"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> MAS Modifications</h3>
-              <p class="ml-5 d-inline-block">Review and accept MAS Modifications</p>
+              <h3 class="white d-inline-block"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> Mass Modifications</h3>
+              <p class="ml-5 d-inline-block">Review and accept Mass Modifications</p>
               <a class="btn btn-secondary ml-5">Get started</a>
             </div>
           </div>
@@ -115,74 +158,70 @@
   </div>  
 </section>
 
-<section class="bg-gsa- toolbox3-img d-none" style="min-height: 400px;">
-
-  
-  <div class="container-fluid px-5 py-5">
-   
-
-      
-    <h1 class="white font-weight-bold">Offer & Mods Toolbox</h1>
-    
- 
-   
-    <div class="row">
 
 
-      <div class="col-lg-12 col-xl-3 pt-3 border-right">
-        <div class="mb-3 ">  
-          
-          <h3 class="white">Everything you need to...</h3>
-          <p class="white">
-            Whether you're looking at create anew offer, checking the status of offers, or reporting your contract sales... the Vendor Services is here to provide you with the information necessary to help your business be successful.
-          </p>
+
+  <section class="px-0 m-0">
+      <div class="container-fluid py-4 bg-gsa-warm-grey-2 ">    
+        <div class="mx-auto">
+          <div class="">
+              <div class="container-fluid px-5">
+              <div class="row">
+                <div class="col-xl-2 col-md-4 col-sm-12"><img src="assets/images/sam-logo.svg" class="img-responsive my-4"></div>
+                <div class="col-xl-10 col-md-8 col-sm-12 ">
+                  <h3 class="gsa-red  font-weight-bold">First time working with GSA or the Federal Government? You will need to register on SAM.gov. </h3>
+                  <p>There, you will obtain your Unique Entity Identifier (UEI) which is used within the various GSA Systems such as eOffer/eMod.  You will also be able to renew/update your entities, update your physical address, search for contract opportunities, and other initial GSA activities. This is the first step to take in order to do business with the government.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-lg-12 col-xl-9 h-100">
+  </section>
+
+<section>
+  <div class="container-fluid py-5">
+    <h3 class="font-weight-bold pl-4 pb-4">PMO Updates and Events</h3>
+    <div class="row px-4 m-0">
+      <div class="col-lg">
         
-
-        <div class="row justify-content-lg-center">
-          <div class="col-sm-12 col-xl pt-3 border-right pl-4 h-100">
-            <div class="mb-3 ">  
-              <h3 class="white"><div class="fal fa-file-spreadsheet" style="width: 2.4rem;"></div> Offers</h3>
-              <ul class="list-unstyled ml-5">
-                <li><a routerLink="/app-understanding-contracts" class="white">Start a new Offer</a></li>
-                  <li><a routerLink="/app-where-to-begin" class="white">Edit an existing Offer</a></li>
-                  <li><a routerLink="/app-education" class="white">Education</a></li>
-                  
-              </ul>
-            </div>
-          </div>
-          
-          <div class="col-sm-12 col-xl pt-3 pl-4 h-100 border-right ">
-            <div class="mb-3">  
-              <h3 class="white"><span class="fal fa-file-invoice-dollar" style="width: 2.4rem;"></span> Sales Reporting</h3>
-              <ul class="list-unstyled ml-5">
-                <li><a href="" class="white">Reporting My Sales</a></li>
-                <li><a href="" class="white">Sales Analysis</a></li>
-                
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-sm-12 col-xl pt-3 pl-4 h-100">
-            <div class="mb-3">  
-              <h3 class="white"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> MAS Modifications</h3>
-              <p class="ml-5">Review and accept MAS Modifications</p>
-              <a class="btn btn-secondary ml-5">Get started</a>
-            </div>
-          </div>
+        <div class="card mb-3">
+          <div class="card-body">
+          <h5 class="font-weight-bold">annoucement title</h5>
+          <small>12/12/2022</small>
+          <p> text description goes here</p>
         </div>
-
+        </div>
+        <div class="card mb-3">
+          <div class="card-body">
+          <h5 class="font-weight-bold">annoucement title</h5>
+          <small>12/12/2022</small>
+          <p> text description goes here</p>
+        </div>
+        </div>
       </div>
-
-
+      <div class="col-lg">
+        
+        <div class="card mb-3">
+          <div class="card-body">
+          <h5 class="font-weight-bold">annoucement title</h5>
+          <small>12/12/2022</small>
+          <p> text description goes here</p>
+        </div>
+        </div>
+        <div class="card mb-3">
+          <div class="card-body">
+          <h5 class="font-weight-bold">annoucement title</h5>
+          <small>12/12/2022</small>
+          <p> text description goes here</p>
+        </div>
+        </div>
+      </div>
     </div>
-    
-  </div>  
+  </div>
 </section>
-
-
+<!-- OLD SAM plug -->
+<!--
   <section class="px-0 m-0">
 
       <div class="container-fluid py-4 bg-gsa-dark">    
@@ -205,32 +244,14 @@
           </div>
         </div>
       </div>
-<!--
-      <div class="container-fluid px-0">    
-        <div class="mx-auto">
-          <div class="">
-              <div class="container px-5">
-              <div class="row">
-                <div class="col"> 
-                  <h4 class="gsa-medium-blue m-0 py-2 border-bottom text-center">
-                    <strong>What to buy, Where to buy, How to buy it.</strong>
-                  </h4>                  
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
--->
+
 
       <div class="container px-5">
           <div class="d-flex justify-content-around flex-wrap">
 
               <div class="col-6 col-sm-4 col-md-3 col-lg-3 py-4 background-arrow d-flex align-items-center">
                 <div class="p-2 text-center">  
-                  <!-- <span class="gsa-red h4 ml-1">
-                      <strong>SAM</strong>
-                  </span> -->
+                 
                   <p class="m-0">Register your Organization and Create an Account using <strong class="gsa-red">SAM</strong></p>
                   <a href="#" class="small">Learn More</a>
                 </div>
@@ -238,10 +259,7 @@
 
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 py-4 background-arrow d-flex align-items-center">
               <div class="p-2 text-center">  
-                <!-- <span class="gsa-red h4 ml-1">
-                    <strong>Offer Portal</strong>
-
-                </span> -->
+               
                 <p class="m-0">Submit your Product or Service Offerings using <strong class="gsa-red">eOffer</strong></p>
                 <a href="#" class="small">Learn More</a>
               </div>
@@ -249,9 +267,7 @@
 
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 py-4 background-arrow d-flex align-items-center">
               <div class="p-2 text-center">  
-                <!-- <span class="gsa-red h4 ml-1">
-                    <strong>PO Portal</strong>
-                </span> -->
+               
                 <p class="m-0">Access Purchase Orders with the <strong class="gsa-red">PO Portal</strong></p>
                 <a href="#" class="small">Learn More</a>
               </div>
@@ -259,18 +275,15 @@
 
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 py-4 d-flex align-items-center">
               <div class="p-2 text-center">  
-                <!-- <span class="gsa-red h4 ml-1">
-                    <strong>FAS Sales Reporting</strong>
-                </span> -->
+               
                 <p class="m-0">Collect, Generate, and Review Sales Reports using <strong class="gsa-red">FAS SR</strong></p>
                 <a href="#" class="small">Learn More</a>
               </div>
             </div> 
           </div>
       </div>  
-
   </section>
-  
+ --> 
 <!--
 <section class="px-0 pt-4 m-0">
   <div class="container px-5">
@@ -359,6 +372,7 @@
                 
                 <ul class="list-unstyled">
                   <li><a class="white" href="eoffer_docs/xml/scheduled_maintenance.xml" target="_blank" title="Notifications about Site maintenance">Site Maintenance Schedule</a></li>
+                  <li><a class="white" href="#" target="_blank" title="Notifications about Site maintenance">Vendor Release Notes</a></li>
                 </ul>
               </div>
             </div>
