Rearranged app icons in homepage.

--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -44,16 +44,56 @@
           <div class="col-sm-12 col-xl h-100">
            <h2 class="m-0 p-0 font-weight-bold white">Quick Links</h2>
           </div>
-          <div class="col-sm-12 col-xl  h-100">
-           eOffer - Icon goes here
-          </div>
           
-          <div class="col-sm-12 col-xl  h-100 ">
-            PO Portal - Icon goes here
-          </div>
-
-          <div class="col-sm-12 col-xl  h-100">
-            FS SR - Icon goes here
+            <div class="container px-3 d-flex justify-content-center">
+              <div class="col-2">
+                  <div class="card btn btn-default" [routerLink]="['/login']">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-invoice color-green app-icon" ></span>
+                          </div>
+                          <a class="nav-link p-0 text-center">
+                              <b class="gsa-dark-grey">Offers/Mods</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="card btn btn-default">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-edit color-orange app-icon" ></span>
+                          </div>
+                          <a href="" class="nav-link p-0 text-center">
+                              <b class="gsa-dark-grey">Mass Mods</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="card btn btn-default">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-invoice-dollar color-purple app-icon" ></span>
+                          </div>
+                          <a href="" class="nav-link p-0 text-center">
+                              <b class="gsa-dark-grey">P.O.'s</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="card btn btn-default">
+                      <div class="card-body p-2 d-flex flex-column">
+                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
+                              <span class="fad fa-file-chart-line color-teal app-icon" ></span>
+                          </div>
+                          <a href="" class="nav-link p-0 text-center">
+                              <b class="gsa-dark-grey">Sales Reports</b>
+                          </a>
+                      </div>
+                  </div>
+              </div>
           </div>
         </div>
 
@@ -75,63 +115,6 @@
     <h1 class="white font-weight-bold px-5">Vendor Toolbox</h1>
     
 
-<div class="row m-0 mb-4">
-  <div class="col p-0 bg-gsa-dark-grey">
-      <div class="" style=" height: 100%;">
-          <div class="container px-3 py-3 d-flex justify-content-center">
-              <div class="col-2">
-                  <div class="card btn btn-default" [routerLink]="['/login']">
-                      <div class="card-body p-2 d-flex flex-column">
-                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
-                              <span class="fad fa-file-invoice color-green app-icon" ></span>
-                          </div>
-                          <a class="nav-link p-0 text-center">
-                              <b class="gsa-red">Offers/Mods</b>
-                          </a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-2">
-                  <div class="card btn btn-default">
-                      <div class="card-body p-2 d-flex flex-column">
-                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
-                              <span class="fad fa-file-edit color-orange app-icon" ></span>
-                          </div>
-                          <a href="" class="nav-link p-0 text-center">
-                              <b class="gsa-red">Mass Mods</b>
-                          </a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-2">
-                  <div class="card btn btn-default">
-                      <div class="card-body p-2 d-flex flex-column">
-                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
-                              <span class="fad fa-file-invoice-dollar color-purple app-icon" ></span>
-                          </div>
-                          <a href="" class="nav-link p-0 text-center">
-                              <b class="gsa-red">P.O.'s</b>
-                          </a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-2">
-                  <div class="card btn btn-default">
-                      <div class="card-body p-2 d-flex flex-column">
-                          <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
-                              <span class="fad fa-file-chart-line color-teal app-icon" ></span>
-                          </div>
-                          <a href="" class="nav-link p-0 text-center">
-                              <b class="gsa-red">Sales Reports</b>
-                          </a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
- 
    
     <div class="row px-5">
 
