--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -40,13 +40,13 @@
  
         
 
-        <div class="row justify-content-lg-center px-4 py-5">
-          <div class="col-sm-12 col-xl h-100">
-           <h2 class="m-0 p-0 font-weight-bold white">Quick Links</h2>
+        <div class="row px-4 py-5">
+          <div class="col-sm-12 col-md-3 col-xl h-100">
+           <h2 class="m-0 p-0 mb-4 font-weight-bold white">Quick Links</h2>
           </div>
           
-            <div class="container px-3 d-flex justify-content-center">
-              <div class="col-2">
+            <div class="col-sm-12 col-md-9 px-3 d-flex">
+              <div class="col-sm-3 col-md-3 col-lg-2">
                   <div class="card btn btn-default" [routerLink]="['/login']">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
@@ -58,7 +58,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-2">
+              <div class="col-sm-3 col-md-3 col-lg-2">
                   <div class="card btn btn-default">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
@@ -70,7 +70,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-2">
+              <div class="col-sm-3 col-md-3 col-lg-2">
                   <div class="card btn btn-default">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
@@ -82,7 +82,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-2">
+              <div class="col-sm-3 col-md-3 col-lg-2">
                   <div class="card btn btn-default">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
