--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -40,14 +40,15 @@
  
         
 
-        <div class="row px-4 py-5">
-          <div class="col-sm-12 col-md-3 col-xl h-100">
-           <h2 class="m-0 p-0 mb-4 font-weight-bold white">Quick Links</h2>
+        <div class="row px-4 pt-3 ">
+          <div class="col-sm-12 col-md-3 col-xl">
+           <h2 class="m-0 py-5 font-weight-bold white">Quick Links</h2>
           </div>
           
-            <div class="col-sm-12 col-md-9 px-3 d-flex">
-              <div class="col-sm-3 col-md-3 col-lg-2">
-                  <div class="card btn btn-default" [routerLink]="['/login']">
+            <div class="col-sm-12 col-md-9 px-3 ">
+              <div class="row justify-content-center">
+              <div class="col-sm-12 col-md  mb-3">
+                  <div class="card btn btn-default h-100" [routerLink]="['/login']">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                               <span class="fad fa-file-invoice color-green app-icon" ></span>
@@ -58,8 +59,8 @@
                       </div>
                   </div>
               </div>
-              <div class="col-sm-3 col-md-3 col-lg-2">
-                  <div class="card btn btn-default">
+              <div class="col-sm-12 col-md  mb-3">
+                  <div class="card btn btn-default h-100">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                               <span class="fad fa-file-edit color-orange app-icon" ></span>
@@ -70,8 +71,8 @@
                       </div>
                   </div>
               </div>
-              <div class="col-sm-3 col-md-3 col-lg-2">
-                  <div class="card btn btn-default">
+              <div class="col-sm-12 col-md  mb-3">
+                  <div class="card btn btn-default h-100">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                               <span class="fad fa-file-invoice-dollar color-purple app-icon" ></span>
@@ -82,8 +83,8 @@
                       </div>
                   </div>
               </div>
-              <div class="col-sm-3 col-md-3 col-lg-2">
-                  <div class="card btn btn-default">
+              <div class="col-sm-12 col-md  mb-3">
+                  <div class="card btn btn-default h-100">
                       <div class="card-body p-2 d-flex flex-column">
                           <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                               <span class="fad fa-file-chart-line color-teal app-icon" ></span>
@@ -94,11 +95,11 @@
                       </div>
                   </div>
               </div>
+              </div>
           </div>
         </div>
 
      
-
 
    
     
@@ -129,8 +130,8 @@
           <div class="col-sm-12 col-xl-12 pt-3 px-0 h-100">
             <div class="mb-3"> 
             <hr class="bg-gsa-light-blue mb-4  mt-0 border-bottom border-gsa-light-blue" /> 
-              <h3 class="white d-inline-block"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> Mass Modifications</h3>
-              <p class="ml-5 d-inline-block">Review and accept Mass Modifications</p>
+              <h3 class="white"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> Mass Modifications</h3>
+              <p class="ml-5">Review and accept Mass Modifications</p>
               <a class="btn btn-secondary ml-5">Get started</a>
             </div>
           </div>
@@ -202,7 +203,7 @@
 
 
   <section class="px-0 m-0">
-      <div class="container-fluid py-4 bg-gsa-warm-grey-2 ">    
+      <div class="container-fluid py-4 bg-gsa-light-grey ">    
         <div class="mx-auto">
           <div class="">
               <div class="container-fluid px-5">
@@ -210,8 +211,16 @@
                 <div class="col-xl-2 col-md-4 col-sm-12"><img src="assets/images/sam-logo.svg" class="img-responsive my-4"></div>
                 <div class="col-xl-10 col-md-8 col-sm-12 ">
                   <h3 class="gsa-red  font-weight-bold">First time working with GSA or the Federal Government? You will need to register on SAM.gov. </h3>
+                  <div class="row">
+                    <div class="col-lg-10">
                   <p>There, you will obtain your Unique Entity Identifier (UEI) which is used within the various GSA Systems such as eOffer/eMod.  You will also be able to renew/update your entities, update your physical address, search for contract opportunities, and other initial GSA activities. This is the first step to take in order to do business with the government.</p>
                 </div>
+                <div class="col">
+                  <a href="#"  class="btn btn-primary">Register Today!</a>
+                </div>
+                </div>
+                </div>
+                
               </div>
             </div>
           </div>
