--- a/src/app/modules/vendor-portal/layouts/vendor-portal-header/vendor-portal-header.component.html
+++ b/src/app/modules/vendor-portal/layouts/vendor-portal-header/vendor-portal-header.component.html
@@ -1,7 +1,7 @@
 <section class="usa-banner" aria-label="Official government website">
   <div class="usa-accordion">
     <header class="usa-banner__header">
-      <div class="usa-banner__inner">
+      <div class="usa-banner__inner ml-0">
         <div class="grid-col-auto">
           <img class="usa-banner__header-flag" src="../../../../../assets/images/content-art/us_flag_small.png"
             alt="U.S. flag" />
@@ -120,9 +120,44 @@
         </button>
 
 
+
+
+        <ul id="access-point-dropdown" *dropdownMenu
+          class="dropdown-menu shadow p-3 mb-5" role="menu"
+          aria-labelledby="access-point" >
+          <li role="menuitem">
+            <a [routerLink]="['/access-point']" routerLinkActive="active">
+              Vendor Portal
+            </a>
+          </li>
+          <li role="menuitem">
+            <a [routerLink]="['/offer-portal/org-selection']" routerLinkActive="active">
+              Offers & Mods
+            </a>
+          </li>
+          <li role="menuitem">
+            <a href="#" routerLinkActive="active">
+              Mass Mods
+            </a>
+          </li>
+          <li role="menuitem">
+            <a href="#" routerLinkActive="active">
+              P.O.'s'
+            </a>
+          </li>
+          <li role="menuitem">
+            <a href="#" routerLinkActive="active">
+              Sales Peports
+            </a>
+          </li>
+        </ul>
+
+        <!--
         <ul id="access-point-dropdown" *dropdownMenu
           class="dropdown-menu dropdown-menu-right p-2 d-flex justify-content-start flex-wrap shadow" role="menu"
           aria-labelledby="access-point" style="max-width: 500px; min-width: 500px;">
+
+
 
           <li role="menuitem" class="col-4 p-2 m-0">
             <a [routerLink]="['/access-point']" routerLinkActive="active">
@@ -199,7 +234,9 @@
               </div>
             </a>
           </li>
+
         </ul>
+      -->
       </li>
 
     </ul>
